--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -1,9 +1,9 @@
 
 <div class="background-image">
   <div class="content-wrapper">
-    <h1 class="text-white text-center">LA UBICACIÓN PERFECTA</h1>
-    <div class="row align-items-center h-100">
-      <div class="col-md-6">
+    <h1 class="title">LA UBICACIÓN PERFECTA</h1>
+    <div class="row align-items-center">
+      <div class="col-md-6 mb-4 mb-md-0">
         <div class="text-white">
           <p>Primer condominio turístico y náutico desarrollado al ingreso de la ciudad de Carmelo, 
             Uruguay, sobre el puente ícono de la ciudad 
