--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 mb-4 mb-md-0">
         <img src="../../assets/renders/Recursos_Covello(10).png" class="img-fluid" alt="">
     </div>
-    <div class="col-md-6 mt-4" style="text-align: center;">
+    <div class="col-md-6" style="text-align: center;">
         <h1>El Proyecto</h1>
         <p>Con monoambientes y unidades de
             1 y 2 dormitorios en la ubicación
