--- a/src/app/components/location/location.component.css
+++ b/src/app/components/location/location.component.css
@@ -1,6 +1,6 @@
 .background-image {
     position: relative;
-    height: 100vh; /* Adjust as needed */
+    height: 80vh; /* Adjust as needed */
     background-image: url('../../../assets/Prototipo_Landing_page_Covello\(1\).png');
     background-size: cover;
     background-position: center;   
@@ -12,14 +12,47 @@
 }
 
 .content-wrapper {
-    position: relative;
+    /* position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: #fff; */
     /* text-align: center; */
-    color: #fff; /* Text color for contrast with background */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+  }
+
+  .title {
+    font-size: 3rem; /* Adjust font size as needed */
+    margin-bottom: 20px;
+    color: white;
   }
 
 .text-white p {
     padding: 10px;
 }
+
+@media (max-width: 991px) {
+    .background-image {
+      min-height: 100vh; /* Increase height for smaller screens */
+    }
+    .title {
+      font-size: 2rem; /* Adjust font size as needed */
+    }
+  
+    .icon-row {
+      padding: 0 10px; /* Adjust padding for smaller screens */
+    }
+  
+    .bordered-paragraph p {
+      font-size: 1rem; /* Adjust font size as needed */
+      padding: 5px;
+      max-width: 90%; /* Adjust as needed */
+    }
+  }
