--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -47,13 +47,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/renders/Postal_Carmelo_R2.jpg" class="d-block w-100">
+      <img [src]="baseUrl + 'assets/renders/Postal_Carmelo_R2.jpg'" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="assets/renders/Postal_Carmelo_R3.jpg" class="d-block w-100">
+      <img [src]="baseUrl + 'assets/renders/Postal_Carmelo_R3.jpg'" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="assets/renders/Postal_Carmelo_R4.jpg" class="d-block w-100">
+      <img [src]="baseUrl + 'assets/renders/Postal_Carmelo_R4.jpg'" class="d-block w-100">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
