--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,6 +1,6 @@
 <div class="row align-items-center">
     <div class="col-md-6 mb-4 mb-md-0">
-        <img src="../../assets/renders/Recursos_Covello(10).png" class="img-fluid" alt="">
+        <img src="assets/renders/Recursos_Covello(10).png" class="img-fluid" alt="">
     </div>
     <div class="col-md-6" style="text-align: center;">
         <h1>El Proyecto</h1>
