--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 
     <div class="row" style="display: flex; justify-content: space-evenly; width: 100vw;">
         <a class="link" href="https://www.covellopropiedades.com">COVELLOPROPIEDADES.COM</a>
-        <a class="link" href="https://www.instagram.com/carmelopostal/"><img class="instagram" src="../../../assets/logos/instagram.svg" alt="instagram-logo">CarmeloPostal</a>
-        <a class="link" href="https://www.instagram.com/carmelopostal/"><img class="instagram" src="../../../assets/logos/instagram.svg" alt="instagram-logo">CovelloUruguay</a>
+        <a class="link" href="https://www.instagram.com/carmelopostal/"><img class="instagram" src="assets/logos/instagram.svg" alt="instagram-logo">CarmeloPostal</a>
+        <a class="link" href="https://www.instagram.com/carmelopostal/"><img class="instagram" src="assets/logos/instagram.svg" alt="instagram-logo">CovelloUruguay</a>
         <p>POLÍTICA DE PRIVACIDAD DE DATOS</p>
     </div>
