--- a/src/app/components/amenities/amenities.component.html
+++ b/src/app/components/amenities/amenities.component.html
@@ -25,22 +25,22 @@
         <div class="container icon-row">
             <div class="row">
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(3).png" alt="Icon 1">
+                    <img src="assets/logos/Recursos_Covello(3).png" alt="Icon 1">
                 </div>
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(4).png" alt="Icon 2">
+                    <img src="assets/logos/Recursos_Covello(4).png" alt="Icon 2">
                 </div>
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(5).png" alt="Icon 3">
+                    <img src="assets/logos/Recursos_Covello(5).png" alt="Icon 3">
                 </div>
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(6).png" alt="Icon 4">
+                    <img src="assets/logos/Recursos_Covello(6).png" alt="Icon 4">
                 </div>
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(7).png" alt="Icon 5">
+                    <img src="assets/logos/Recursos_Covello(7).png" alt="Icon 5">
                 </div>
                 <div class="col-6 col-md-4 col-lg">
-                    <img src="../../assets/logos/Recursos_Covello(8).png" alt="Icon 6">
+                    <img src="assets/logos/Recursos_Covello(8).png" alt="Icon 6">
                 </div>
             </div>
         </div>
