--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -9,8 +9,8 @@
 <div class="row">
   <div class="col-md-6">
     <div class="row">
-      <img src="../../../assets/Postal_Carmelo_R24.jpg" class="img-fluid" alt="">
-      <img src="../../../assets/logos/logo_covello2.png" class="logo-img" alt="">
+      <img src="assets/Postal_Carmelo_R24.jpg" class="img-fluid" alt="">
+      <img src="assets/logos/logo_covello2.png" class="logo-img" alt="">
     </div>
   </div>
   <div class="col-md-6 bordered" id="landingForm">
