--- a/src/app/components/location/location.component.css
+++ b/src/app/components/location/location.component.css
@@ -1,7 +1,7 @@
 .background-image {
     position: relative;
     height: 80vh; /* Adjust as needed */
-    background-image: url('../../../assets/Prototipo_Landing_page_Covello\(1\).png');
+    /* background-image: url('../../../assets/Prototipo_Landing_page_Covello\(1\).png'); */
     background-size: cover;
     background-position: center;   
     width: 100vw; /* Ensure it spans the full width of the viewport */
