testing deployment with only one image in app.component with this format <img src="assets/renders/Postal_Carmelo_R2.jpg">

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-sm">
+<!-- <div class="container-sm">
   <app-navbar></app-navbar>
   <section id="home">
     <app-home></app-home>
@@ -21,4 +21,5 @@
   <section id="footer">
     <app-footer></app-footer>
   </section>
-</div>
+</div> -->
+<img src="assets/renders/Postal_Carmelo_R2.jpg">
