--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,4 @@
     <app-footer></app-footer>
   </section>
 </div> -->
-<img src="covello/assets/renders/Postal_Carmelo_R2.jpg">
+<img src="assets/renders/Postal_Carmelo_R2.jpg" alt="assets/renders/Postal_Carmelo_R2.jpg j3">
